[Android] update call api logic

--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
@@ -110,6 +110,10 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <include
+        android:visibility="invisible"
+        layout="@layout/show_to1v1_room_auto_connected_view" />
+
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivHangup"
