[Android] showTo1v1 add logic

--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_fragment.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_fragment.xml
@@ -172,6 +172,7 @@
                 android:id="@+id/layoutVideoContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/transparent"
                 android:orientation="vertical" />
         </androidx.cardview.widget.CardView>
 
