--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_auto_connected_view.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_auto_connected_view.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:layout_marginHorizontal="10dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/show_to1v1_top_toast_card">
 
     <androidx.appcompat.widget.AppCompatImageView
