--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_activity.xml
@@ -33,4 +33,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <LinearLayout
+        android:id="@+id/layoutCreateRoom2"
+        android:layout_width="175dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="63dp"
+        android:background="@drawable/bg_def_button_solid"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@mipmap/icon_create_room"
+            android:drawablePadding="5dp"
+            android:text="@string/show_to1v1_create_room"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
