--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_come_soon_view.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_come_soon_view.xml
@@ -7,7 +7,6 @@
     android:background="@drawable/show_to1v1_come_soon_bg">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivUserAvatar"
         android:layout_width="42dp"
         android:layout_height="38dp"
         android:layout_marginStart="2dp"
@@ -20,11 +19,11 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="50dp"
         android:text="@string/show_to1v1_come_soon1"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@id/ivUserAvatar"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
