--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_setting_dialog.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_setting_dialog.xml
@@ -2,8 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black_30_percent">
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clContent"
