--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_send_dialog.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_send_dialog.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black_30_percent">
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clContent"
