update sdk to 4.1.1.15

--- a/Android/scenes/show/src/main/res/layout/show_live_detail_living_end.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_living_end.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:fitsSystemWindows="true"
-    android:background="#141650">
+    android:background="#141650"
+    android:paddingTop="@dimen/base_status_height">
 
     <TextView
         android:id="@+id/tvLivingEnd"
