--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_detail_activity.xml
@@ -74,6 +74,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="3dp"
                     android:maxLength="14"
+                    android:ellipsize="end"
                     android:textColor="@color/white"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/ivUserAvatar"
